--- a/WpfViewer/App.xaml
+++ b/WpfViewer/App.xaml
@@ -1,9 +1,10 @@
-﻿<Application x:Class="WpfViewer.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfViewer"
-             StartupUri="MainWindow.xaml">
+﻿<prism:PrismApplication 
+    x:Class="WpfViewer.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:WpfViewer"
+    xmlns:prism="http://prismlibrary.com/">
     <Application.Resources>
-         
+        <!-- Ресурсы приложения -->
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
