Макет базового интерфеса. Ждем БД.

--- a/WpfViewer/Views/MainView.xaml
+++ b/WpfViewer/Views/MainView.xaml
@@ -3,21 +3,26 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfViewer"
+        xmlns:prism="http://prismlibrary.com/"
         xmlns:helix="http://helix-toolkit.org/wpf"
-        xmlns:vm="clr-namespace:WpfViewer.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1080" Width="1920">
-
-    <Window.DataContext>
-        <vm:MainViewModel/>
-    </Window.DataContext>
-
+        Title="Model Version Control" Height="600" Width="800">
     <Grid>
-        <Button Content="Выбрать модель" Command="{Binding LoadModelCommand}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="120"/>
-        <helix:HelixViewport3D x:Name="viewPort" ZoomExtentsWhenLoaded="True"  CameraRotationMode="Turntable"  Margin="10,45,10,10">
-            <helix:DefaultLights/>
-            <ModelVisual3D Content="{Binding ModelContent}"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Column="0" Background="LightGray">
+            <Button Content="Create Repository" Command="{Binding CreateRepositoryCommand}" Margin="10" />
+            <ListView ItemsSource="{Binding Projects}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedProject}" Margin="10"/>
+            <Button Content="Add Model" Command="{Binding AddModelCommand}" Margin="10"/>
+            <Button Content="Remove Model" Command="{Binding RemoveModelCommand}" Margin="10"/>
+            <TextBlock Text="Models" Margin="10,20,10,0"/>
+            <ListView ItemsSource="{Binding SelectedProject.Models}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedModel}" Margin="10"/>
+        </StackPanel>
+        <helix:HelixViewport3D Grid.Column="1">
+            <helix:DefaultLights/>            
+            <ModelVisual3D Content="{Binding CurrentModel3D}"/>
         </helix:HelixViewport3D>
     </Grid>
 </Window>
